# ai-backend

aetheria-api/: .env.example  .gitignore  DATABASE_IMPLEMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  db_demo.py  demo.py  docker-compose.yml  pyproject.toml  test_setup.py
aetheria-api/alembic/: env.py  script.py.mako
aetheria-api/alembic/versions/: 001_add_plan_routine_step.py
aetheria-api/app/: __init__.py  main.py
aetheria-api/app/core/: __init__.py  config.py  db.py  logging.py
aetheria-api/app/routers/: compare.py  engine.py  health.py  intake.py  machine.py
aetheria-api/app/schemas/: common.py  engine.py  intake.py  machine.py  plan.py
aetheria-api/app/services/: __init__.py  db_service.py  rules_engine.py  whatsapp_stub.py
aetheria-api/scripts/: init.sql
aetheria-api/tests/: test_database.py
